# pygerengastos

./: .env.example  .gitignore  BRANCHING.md  BUILD.md  IMPLEMENTACAO.md  INSTALL.md  LICENSE  README.md  RELATORIOS.md  SUMMARY.md  TODO.md  build.ps1  debug_product_update.py  gastos_test.duckdb  main.py  populate_test_data.py  pyproject.toml  requirements.txt  test_csv_export_refactor.py  test_integracao_relatorios.py  test_relatorios.py  validate_refactor.py  verify_logging.py  verify_seeding.py
.agent/rules/: instructions.md
.gemini/: config.yaml  styleguide.md
.github/: copilot-instructions.md
.github/agents/: speckit.taskstoissues.agent.md
.github/instructions/: code-review.instructions.md
.specify/memory/: constitution.md
config/: README.md  modelos_llm.toml
data/: README.md  categorias.csv  gastos.db  gastos.duckdb
data/raw_nfce/: .gitignore
src/: __init__.py  logger.py
src/classifiers/: __init__.py  embeddings.py  groq.py  llm_classifier.py
src/data/chroma/: chroma.sqlite3
src/data/chroma/3bdad89a-47d4-4fba-bf39-c10c56e643e1/: index_metadata.pickle
src/database/: __init__.py
src/scrapers/: __init__.py  receita_rs.py
src/ui/: __init__.py  analise.py  home.py  importacao.py  normalizacao.py  relatorios.py
tests/: __init__.py  test_database.py  test_database_utils.py  test_embeddings_consolidacao.py  test_embeddings_similarity.py  test_groq_classifier.py  test_integration_llm.py  test_llm_classifier.py  test_llm_config_loading.py  test_modelos_llm_toml.py  test_normalizacao_produtos.py  test_produto_categoria_update.py  test_receita_rs.py  test_relatorios.py  test_semantic_integration.py  teste_completetion.py  teste_integration_llm.py
