[project]
name = "gerenciador-de-despesa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "chromadb==1.3.5",
    "duckdb>=1.2",
    "httpx>=0.26.0",
    "litellm>=1.80.8",
    "pandas>=2.2",
    "pytest>=8.0",
    "python-dotenv>=1.0",
    "sentence-transformers==5.1.2",
    "streamlit>=1.32",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pydantic.PydanticDeprecatedSince20:litellm.*",
]
