[project]
name = "gerenciador-de-despesa"
version = "0.1.0"
description = "Aplicação em Python + Streamlit que importa notas fiscais eletrônicas (NFC-e) do portal da Receita Gaúcha, classifica itens automaticamente via LiteLLM/Gemini e armazena tudo em SQLite3 para visualização dos gastos."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "stribus", email = "seu-email@exemplo.com" }
]
license = { text = "MIT" }
keywords = ["nfc-e", "gerenciamento", "despesas", "streamlit", "SQLite3", "gemini", "classificacao-automatica"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "beautifulsoup4>=4.12.2",
    "chromadb==1.3.5",
    "httpx>=0.26.0",
    "litellm>=1.80.8",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.14.3",
    "sentence-transformers==5.1.2",
    "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Repository = "https://github.com/stribus/pygerengastos"
Issues = "https://github.com/stribus/pygerengastos/issues"

[project.scripts]
gerengastos = "streamlit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "main.py",
    "data/categorias.csv",
    "data/README.md",
    ".env.example",
    "INSTALL.md",
]

[tool.pytest.ini_options]
markers = [
    "integration: testes de integracao com APIs externas",
]
filterwarnings = [
    "ignore::pydantic.PydanticDeprecatedSince20:litellm.*",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
